--- a/src/app/components/productos/cat-mujer/cat-mujer.component.html
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.html
@@ -113,9 +113,10 @@
                     <img src="../../../../assets/mujer.png" alt="Silueta Mujer" class="float-left imgWoman">
                 </div>
                 <h3>Mujeres</h3>
-                <p>Total SKU: 50</p>
-                <p>% de participación: 50%</p>
+                <p>Total SKU: {{mujerTotalSKU}}</p>
+                <p>% de participación: {{mujerSKU}}%</p>
                 <p>Color predominante: </p>
+                <abbr style=" cursor:pointer"  title="{{colorMujerPalabra}}"><div style="background-color:{{rgbMujer}}" class="colorx mb-3"></div></abbr>
             </div>
         </div>
         <div>
@@ -126,28 +127,28 @@
                     <img src="../../../../assets/productos/exterior.png" alt="Silueta Mujer" class="imgPrendas">
                     <p>{{exterior}}</p>
                     <p>{{exteriorPorcentage}}%</p>
-                    <div style="background-color:{{colorExterior}}" class="colorx mb-3"><abbr style=" cursor:pointer" title="{{colorExteriorPalabra}}">.</abbr></div>
+                    <abbr style=" cursor:pointer" title="{{colorExteriorPalabra}}"><div style="background-color:{{colorExterior}}" class="colorx mb-3"></div></abbr>
                 </div>
                 <div class="item2-2-img">
                     <h3>Interior</h3>
                     <img src="../../../../assets/productos/interior.png" alt="Silueta Mujer" class="imgPrendas">
                     <p>{{interior}}</p>
                     <p>{{interiorPorcentage}}%</p>
-                    <div style="background-color:{{colorInterior}}" class="colorx mb-3"><abbr style=" cursor:pointer" title="{{colorInteriorPalabra}}">.</abbr></div>
+                    <abbr style=" cursor:pointer" title="{{colorInteriorPalabra}}"><div style="background-color:{{colorInterior}}" class="colorx mb-3"></div></abbr>
                 </div>
                 <div class="item2-2-img">
                     <h3>Calzado</h3>
                     <img src="../../../../assets/productos/calzado.png" alt="Silueta Mujer" class="imgPrendas">
                     <p>{{calzado}}</p>
                     <p>{{calzadoPorcentage}}%</p>
-                    <div style="background-color:{{colorCalzado}}" class="colorx mb-3"><abbr style=" cursor:pointer" title="{{colorCalzadoPalabra}}">.</abbr></div>
+                    <abbr style=" cursor:pointer" title="{{colorCalzadoPalabra}}"><div style="background-color:{{colorCalzado}}" class="colorx mb-3"></div></abbr>
                 </div>
                 <div class="item2-2-img">
                     <h3>Accesorios</h3>
                     <img src="../../../../assets/productos/accesorios.png" alt="Silueta Mujer" class="imgPrendas">
                     <p>{{accesorios}}</p>
                     <p>{{accesoriosPorcentage}}%</p>
-                    <div style="background-color:{{colorAccesorios}}" class="colorx mb-3"><abbr style=" cursor:pointer" title="{{colorAccesoriosPalabra}}">.</abbr></div>
+                    <abbr style=" cursor:pointer" title="{{colorAccesoriosPalabra}}"><div style="background-color:{{colorAccesorios}}" class="colorx mb-3"></div></abbr>
                 </div>
             </div>
         </div>
