--- a/src/app/components/informe-categoria/table2/table2.component.html
+++ b/src/app/components/informe-categoria/table2/table2.component.html
@@ -98,14 +98,17 @@
             </a>
             <ul class="collapse list-unstyled" id="filterColor">
               <div class="overflow-auto container-scroll">
-                <li *ngFor="let color of colorData">
+                <div *ngFor="let color of colorData">
                   <label class="control control--checkbox">
                     <input class="color2" type="checkbox" value="{{color.value}}" name="{{color.value}}"
                       (change)="validateCheckFilter2($event.target.checked, color, $event.target.className, $event.target)"
-                      id="{{color.value}}" />
+                      id="{{color.value}}" [ngStyle]="{'background': color.hexa}" />
+
+                    <div class="btn ml-2 mr-1" [ngStyle]="{'background': color.hexa}"></div>
+
                     {{color.text}}
                   </label>
-                </li>
+                </div>
               </div>
             </ul>
           </li>
