--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
@@ -4,7 +4,7 @@
     <div class="gridFiltersCharts">
       <h2 class="titulo-chart">Total descontinuados marcas</h2>
 
-      <svg xmlns="http://www.w3.org/2000/svg" width="17" heigth="17"
+      <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
         xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
         viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
         aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
@@ -157,7 +157,7 @@
       </div>
 
       <div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="17" heigth="17"
+        <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
           aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
