se agrega descontinuados

--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
@@ -144,7 +144,7 @@
       </div>
     </div>
     <div class="chart-line marginCharts">
-      <canvas id="myChart" width="200px" height="120px" #mychart></canvas>
+      <canvas id="myChart" width="200px" height="120px"></canvas>
     </div>
   </div>
   <!-- fin chart -->
