--- a/src/app/components/productos/cat-mujer/cat-mujer.component.css
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.css
@@ -159,6 +159,14 @@
   margin: 0 auto;
 }
 
+/* abbr[title], acronym[title] {
+  border-radius: 5%;
+  border: none;
+} */
+
+abbr {
+  background-color: white;
+}
 
 @media screen and (max-width: 1000px) {
   .grid-container {
