--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -81,11 +81,11 @@
 
     <div class="contenedor-labels">
         <div class="button-sidebar">
-            <button class="btn-sidebar" id="menu-toggle-sidebar-products">
-                <span class="material-icons">navigate_before</span>
-            </button>
+          <button class="btn-sidebar" id="menu-toggle-sidebar-products">
+            <span class="flecha izquierda"></span>
+          </button>
         </div>
-    </div>
+      </div>
 
     <br>
     <div class="container-fluid">
