--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -1,4 +1,3 @@
-/* CSS Acevedo */
 #wrapper {
   overflow-x: hidden;
 }
@@ -6,7 +5,7 @@
 #sidebar-wrapper {
   background-color: #cecece;
   min-height: 100vh;
-  margin-left: -15rem;
+  margin-left: -12rem;
   -webkit-transition: margin 0.25s ease-out;
   -moz-transition: margin 0.25s ease-out;
   -o-transition: margin 0.25s ease-out;
@@ -14,8 +13,8 @@
 }
 
 #sidebar-wrapper .list-group {
-  width: 15rem;
-  padding: 1.5rem;
+  width: 12rem;
+  padding: 1rem;
   padding-top: 3rem;
 }
 
@@ -29,11 +28,23 @@
 .btn-sidebar {
   background: #cecece;
   border: 0px solid #cecece;
-  width: 40px;
-  height: 130px;
-  padding-right: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  width: 18px;
+  height: 100px;
+  border-top-right-radius: 18px;
+  border-bottom-right-radius: 18px;
+}
+
+.flecha	{
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	margin: 0 auto;
+	border-top: solid 3px;
+	border-right: solid 3px;
+}
+
+.flecha.izquierda {
+	transform: rotate(225deg);
 }
 
 .hoverSvgFilter:hover {
@@ -57,6 +68,37 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.checkboxAlign {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 2%;
+}
+
+.colorStyles{
+  width: 30px !important;
+  height: 30px !important;
+  margin: 5px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  outline: 1px solid gray;
+  border-radius: 5px;
+  box-shadow: none;
+  font-size: 20px;
+  text-align: center;
+  line-height: 30px;
+}
+
+.colorStyles:hover {
+  cursor: pointer; 
+}
+
+.colorStyles:checked:after {
+  content: '✔';
+  color: white;
 }
 
 .item-filter {
@@ -145,7 +187,7 @@
   }
 
   #wrapper.toggled #sidebar-wrapper {
-    margin-left: -15rem;
+    margin-left: -12rem;
   }
 }
 
@@ -161,12 +203,6 @@
   color: rgba(255, 255, 255, 0.8);
 }
 
-
-
-/* Fin CSS Acevedo */
-
-
-/*  ccs Juan Pablo  */
 /* Float four columns side by side */
 .column {
   float: left;
@@ -357,10 +393,6 @@ a.sel2.activo::before {
   border-radius: 50%;
   background: #358da3;
 }
-
-
-
-/* fin ccs Juan Pablo  */
 
 
 /* media querys */
