--- a/src/app/components/productos/productos.component.css
+++ b/src/app/components/productos/productos.component.css
@@ -1,4 +1,3 @@
-/* CSS Acevedo */
 #wrapper {
   overflow-x: hidden;
 }
@@ -6,7 +5,7 @@
 #sidebar-wrapper {
   background-color: #cecece;
   min-height: 100vh;
-  margin-left: -15rem;
+  margin-left: -12rem;
   -webkit-transition: margin 0.25s ease-out;
   -moz-transition: margin 0.25s ease-out;
   -o-transition: margin 0.25s ease-out;
@@ -14,8 +13,8 @@
 }
 
 #sidebar-wrapper .list-group {
-  width: 15rem;
-  padding: 1.5rem;
+  width: 12rem;
+  padding: 1rem;
   padding-top: 3rem;
 }
 
@@ -29,15 +28,23 @@
 .btn-sidebar {
   background: #cecece;
   border: 0px solid #cecece;
-  width: 40px;
-  height: 130px;
-  padding-right: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  width: 18px;
+  height: 100px;
+  border-top-right-radius: 18px;
+  border-bottom-right-radius: 18px;
 }
 
-.material-icons{
-  font-size: 30px;
+.flecha	{
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	margin: 0 auto;
+	border-top: solid 3px;
+	border-right: solid 3px;
+}
+
+.flecha.izquierda {
+	transform: rotate(225deg);
 }
 
 .sel1 {
@@ -98,7 +105,7 @@
   }
 
   #wrapper.toggled #sidebar-wrapper {
-    margin-left: -15rem;
+    margin-left: -12rem;
   }
 }
 
